feat: Add shop menu translations for all languages
- Add menu.shop key to Japanese, English, Korean, Chinese (Simplified and Traditional) translation files
- Japanese: 'ショップ'
- English: 'Shop'
- Korean: '상점'
- Chinese (Simplified): '商店'
- Chinese (Traditional): '商店'

Task 1 of Issue #171 implementation

--- a/src/locales/en/menu.json
+++ b/src/locales/en/menu.json
@@ -13,6 +13,7 @@
       "title": "BubblePop",
       "subtitle": "Bubble Popping Game",
       "start": "Start Game",
+      "shop": "Shop",
       "settings": "Settings",
       "help": "Help",
       "userInfo": "User Info",
