--- a/src/locales/ja/menu.json
+++ b/src/locales/ja/menu.json
@@ -13,6 +13,7 @@
       "title": "BubblePop",
       "subtitle": "泡割りゲーム",
       "start": "ゲーム開始",
+      "shop": "ショップ",
       "settings": "設定",
       "help": "ヘルプ",
       "userInfo": "ユーザー情報",
