--- a/src/locales/ko/menu.json
+++ b/src/locales/ko/menu.json
@@ -13,6 +13,7 @@
       "title": "BubblePop",
       "subtitle": "버블 터뜨리기 게임",
       "start": "게임 시작",
+      "shop": "상점",
       "settings": "설정",
       "help": "도움말",
       "userInfo": "사용자 정보",
