--- a/src/locales/zh-CN/menu.json
+++ b/src/locales/zh-CN/menu.json
@@ -13,6 +13,7 @@
       "title": "BubblePop",
       "subtitle": "泡泡消除游戏",
       "start": "开始游戏",
+      "shop": "商店",
       "settings": "设置",
       "help": "帮助",
       "userInfo": "用户信息",
