--- a/src/locales/zh-TW/menu.json
+++ b/src/locales/zh-TW/menu.json
@@ -13,6 +13,7 @@
       "title": "BubblePop",
       "subtitle": "泡泡消除遊戲",
       "start": "開始遊戲",
+      "shop": "商店",
       "settings": "設定",
       "help": "說明",
       "userInfo": "使用者資訊",
